# gimp-data

cursors/: meson.build
icons/Default/: meson.build
icons/Legacy/: meson.build
icons/icon-lists/: scalable.list
images/: README.md  export-splash.py  gimp-splash.crop  meson.build  sidrat.data  splash-log.md  splash2installer.py  splash2installer.py.in
images/logo/: README.md  gen-fileicon.py.in  gen-gimp-bmp.py.in  gen-gimp-dmg-icns.py.in  gen-gimp-dmg.py.in  gen-gimp-icns.py.in  gen-gimp-ico.py.in  gen-gimp-png.py.in  gen-plug-ins-ico.py.in  gen-setup-ico.py.in  meson.build
images/macos/: gimp-dmg.xcf.xz
